Fix overflow on jobs page

--- a/stylesheets/sass/_jobs.scss
+++ b/stylesheets/sass/_jobs.scss
@@ -41,7 +41,6 @@ div#jobs-wrapper {
       div {
         @include column-count(2);
         @include column-gap(flex-gutter(8));
-        height: 100px;
       }
     }
 
